--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,41 @@ body {
 .transparent {
   background-image: url('../public/transparent.png');
 }
+
+.donate {
+  width: 100px;
+  height: 50px;
+  padding: 0.5em 0.75em;
+  border: none;
+  border-radius: 0.75rem;
+  color: var(--bg);
+  transition: all 1000ms;
+  font-size: 1.2rem;
+  position: relative;
+  overflow: hidden;
+  outline: 2px solid var(--bg);
+}
+
+.donate:hover {
+  color: var(--highlight);
+  transform: scale(1.1);
+  outline: 2px solid var(--bg);
+  box-shadow: 4px 5px 17px -4px var(--bg);
+}
+
+.donate::before {
+  content: "";
+  position: absolute;
+  left: -50px;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--bg);
+  transform: skewX(45deg);
+  z-index: -1;
+  transition: width 700ms;
+}
+
+.donate:hover::before {
+  width: 250%;
+}
